tests/e2e/osb-broker-resources/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openbar
  namespace: crossplane-system
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: 
    matchLabels:
      app: osb-fake-broker
      test: "true"
  policyTypes:
  - Egress
  - Ingress
