tests/e2e/osb-broker-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-broker-service
  namespace: crossplane-system
spec:
  selector:
    app: osb-fake-broker
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
